fixed host null issue for HTTP POST request